# Vulpes-Editor

./: CMakeLists.txt  README.md
assets/: entityList.json
src/: application.cpp  application.h  main.cpp
src/UI/: uiConsoleManager.cpp  uiConsoleManager.h  uiEditorToolsManager.cpp  uiEditorToolsManager.h  uiManager.cpp  uiManager.h  uiObjManager.cpp  uiObjManager.h
src/UI/editor/: uiConsoleManager.cpp  uiConsoleManager.h  uiEditorToolsManager.cpp  uiEditorToolsManager.h  uiObjManager.cpp  uiObjManager.h
src/assets/: entityList.json
src/core/: event.hpp  eventBus.hpp  eventListener.hpp
src/editor/: editorRender.cpp  editorRender.h  gizmo.cpp  gizmo.hpp  snapGrid.cpp  snapGrid.h
src/libs/: vulpUtilities.h  vulpUtilities.hpp
